[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = "A test of basic streamlit app-building"
authors = ["Jonno <j.holding@yordasgroup.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
