[tool.poetry]
name = "extracted-data-qc"
version = "0.1.0"
description = "QC application for raw structured data extractions"
authors = ["Jonno <j.holding@yordasgroup.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
